// Copyright 2021 drillbits
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package apigateway.urldecode.echo;

import "google/api/annotations.proto";

option go_package = "github.com/drillbits/googlecloud-api-gateway-urldecode/genproto/api";

service Echo {
  rpc EchoQuery(EchoQueryRequest) returns (EchoQueryResponse) {
    option (google.api.http) = {
      get : "/echo"
    };
  }
}

message EchoQueryRequest { string query = 1; }

message EchoQueryResponse { string decoded_query = 1; }
